child elements for container has been added

--- a/css_grid/excercise01_holy_grail/index.html
+++ b/css_grid/excercise01_holy_grail/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="container">
-
+        <div id="header">Header</div>
+        <div id="sidebar">Sidebar</div>
+        <div id="navbar">Nav</div>
+        <div id="article">Article</div>
+        <div id="footer">Footer</div>
     </div>
     
 </body>
