paragraph's has been added

--- a/css_grid/excercise01_holy_grail/index.html
+++ b/css_grid/excercise01_holy_grail/index.html
@@ -11,7 +11,11 @@
         <div id="header">Header</div>
         <div id="sidebar">Sidebar</div>
         <div id="navbar">Nav</div>
-        <div id="article">Article</div>
+        <div id="article">Article
+            <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magnam iure temporibus, ea accusamus ratione eos fugiat similique ad sapiente aspernatur placeat deserunt maiores magni saepe aliquid, eaque suscipit architecto!</p></div>
+            <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus animi culpa unde placeat id, dolores quis quisquam qui rerum nostrum maxime repellat minima alias itaque libero corrupti reiciendis nobis delectus.</p></div>
+            <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio in voluptates distinctio odit recusandae consequuntur est, nulla repellendus aliquam perspiciatis aspernatur deleniti nihil necessitatibus natus sit nisi ea fuga deserunt.</p></div>
+        </div>
         <div id="footer">Footer</div>
     </div>
     
