--- a/css_grid/excercise02_holy_grail_responsive/index.html
+++ b/css_grid/excercise02_holy_grail_responsive/index.html
@@ -6,6 +6,12 @@
     <title>Responsive Holy Grail</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">header</div>
+        <div class="sidebar">Sidebar</div>
+        <div class="nav">Nav</div>
+        <div class="article">Article</div>
+        <div class="footer">Footer</div>
+    </div>
 </body>
 </html>
