final styling has been done

--- a/css_grid/excercise02_holy_grail_responsive/index.html
+++ b/css_grid/excercise02_holy_grail_responsive/index.html
@@ -11,7 +11,11 @@
         <div class="header">Header</div>
         <div class="sidebar">Sidebar</div>
         <div class="nav">Nav</div>
-        <div class="article">Article</div>
+        <div class="article">Article
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur quas asperiores, quaerat culpa aspernatur dolorum provident dicta, autem veritatis, earum ipsa ullam rem consequatur. Ipsam aspernatur cumque ducimus recusandae?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere vel quas reiciendis ex exercitationem sint consequatur sapiente odio velit earum. Modi quasi sequi nisi consequatur officia ipsa tenetur hic autem!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis sunt nihil ratione at hic repudiandae nobis pariatur qui obcaecati iusto sapiente ad dolore labore nemo illum temporibus accusamus, quis distinctio!</p>
+        </div>
         <div class="footer">Footer</div>
     </div>
 </body>
