comment section in head

--- a/css_grid/excercise03_holy_grail_mockup/index.html
+++ b/css_grid/excercise03_holy_grail_mockup/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>holy-grail-mockup</title>
     <link rel="stylesheet" href="style.css">
+<!-- This exercise is part of The Odin Project (TOP) curriculum, Advanced Grid Properties section. The end result is shown in the folder named "output_top." However, I am working on my own custom styling, even though the layout will follow the curriculum, to express creativity and explore other learning aspects. -->
+
 </head>
 <body>
     
