basic markup has been done

--- a/css_grid/excercise03_holy_grail_mockup/index.html
+++ b/css_grid/excercise03_holy_grail_mockup/index.html
@@ -9,6 +9,95 @@
 
 </head>
 <body>
-    
+    <div class="grid-container">   
+        <!-- semantic HTML is needed for accessibility and SEO. Divs don't have meaning, however, they can be used for styling purposes -->
+        <header>
+
+            <h1> Logo</h1>  <!-- Subject to change -->
+            <div class="grid-item header">
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Movies</li>
+                        <li>Tv Shows</li>
+                        <li>Favourites</li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <section>
+                <div class="sidebar">
+                    <div class="placeholder"></div>
+                    <div class="placeholder"></div>
+                    <div class="placeholder"></div>
+                    <div class="placeholder"></div>
+                </div>
+            </section>
+            <section>
+                <nav>
+                    <ul>
+                        <li>Latest Movies</li>
+                        <li>Top 15</li>
+                        <li>Featured</li>
+                    </ul>
+                </nav>
+            </section>
+            <section>
+                <div class="article_section">
+                    <article class="article">Article Title
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid unde suscipit a dicta iste tenetur quo. Aspernatur veniam accusamus dignissimos odit corrupti accusantium fugit quisquam? Ducimus aut facilis minima quaerat.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Natus tenetur dolorem eum labore itaque molestiae, quasi, veritatis doloribus dicta quibusdam numquam hic nostrum eius perspiciatis dolorum? Facilis quis rerum eveniet quae maxime. Dolorum quibusdam omnis commodi eos magnam.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Rem velit tempora cupiditate ipsa! Quia, a laudantium? Commodi nam reprehenderit repellat. Quasi doloremque ad vero ut tempora, maxime ipsum quod quaerat, nemo iusto suscipit laboriosam itaque omnis possimus saepe.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Omnis saepe officiis iste culpa aspernatur non tempora? Iusto iure qui distinctio dolore provident maxime et. Neque recusandae cum impedit perferendis nesciunt sed. Laudantium omnis magnam enim deleniti, consectetur sit.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>A commodi ipsa nesciunt molestias, libero, temporibus rerum dolorem facilis eaque reprehenderit nostrum tenetur. Incidunt ea corporis neque consequuntur. Sit tenetur sapiente odit saepe officia! Dolor modi quos sed est?</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Numquam eum non accusamus consequuntur odio, fugit consectetur nobis eos blanditiis. Error facilis dolor veritatis eligendi, corrupti temporibus debitis eveniet, a qui inventore optio molestias expedita cupiditate porro ex nulla.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Quasi fugiat voluptate itaque rerum vitae excepturi in optio consectetur cupiditate nesciunt eius sunt omnis corrupti, cum obcaecati impedit corporis voluptatum? Soluta facere amet corrupti commodi porro consequuntur magnam iure?</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Iure sed reprehenderit expedita ducimus vero, voluptate saepe repudiandae optio fugiat dicta voluptatum ipsum fuga beatae incidunt nam vitae neque maxime. Ipsum maiores saepe, veritatis sapiente delectus nam vel? Iusto.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Quaerat laborum tempore est similique! Est totam pariatur doloribus sint asperiores et cupiditate hic doloremque, enim illo, voluptates iste vero, in commodi corrupti culpa optio harum tempora alias eveniet dolorem?</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Ad itaque error iure in fuga expedita excepturi minus cupiditate architecto illo quo ea nam dolorum dolore vel inventore, quaerat id recusandae. Debitis harum deleniti sequi quo quos quisquam non.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Quam quasi voluptatem vitae odio impedit repellat dignissimos autem repudiandae nesciunt eaque numquam temporibus, esse iure nulla maxime id unde quas nisi! Nemo libero exercitationem, eaque fugit totam sit quae.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Explicabo ipsum adipisci perferendis deleniti nihil incidunt dolores veritatis quia voluptatum odio. Eaque pariatur ex a voluptates voluptate fuga nobis ducimus, quidem dolorum non illo voluptatum tenetur veritatis. Corrupti, soluta.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Sed itaque saepe consequatur dolores tempora ratione quas, accusamus similique aliquam ab facere mollitia eum, dolorem deleniti molestiae quos maxime? Ad ratione est veritatis quam eum inventore voluptas nihil pariatur?</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Tenetur labore, eveniet eaque commodi ipsam aliquam esse saepe provident mollitia eligendi, inventore at nisi ducimus velit error quo natus odio quasi? Vero rem ullam cum dolorum earum voluptatum quia.</p>
+                    </article>
+                    <article class="article">Article Title
+                        <p>Optio eos omnis aperiam architecto blanditiis quod error velit at itaque alias nemo vero incidunt commodi, laboriosam pariatur aliquam, eligendi maxime? Ratione accusantium animi facilis ipsum quasi, adipisci itaque maxime?</p>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>Copyright &#169 pingponger 2021</p>
+        </footer>
+    </div>
+
+<!-- articles and placeholders are subject to change. Accessibility is not done yet. There are two navigation bars -->
 </body>
 </html>
