various id's has been to tags

--- a/css_grid/excercise03_holy_grail_mockup/index.html
+++ b/css_grid/excercise03_holy_grail_mockup/index.html
@@ -15,7 +15,7 @@
 
             <h1> Logo</h1>  <!-- Subject to change -->
             <div class="grid-item header">
-                <nav>
+                <nav id="navbar primary">
                     <ul>
                         <li>Home</li>
                         <li>Movies</li>
@@ -26,7 +26,7 @@
             </div>
         </header>
         <main>
-            <section>
+            <section id="sidebar">
                 <div class="sidebar">
                     <div class="placeholder"></div>
                     <div class="placeholder"></div>
@@ -34,7 +34,7 @@
                     <div class="placeholder"></div>
                 </div>
             </section>
-            <section>
+            <section id="navbar secondary ">
                 <nav>
                     <ul>
                         <li>Latest Movies</li>
@@ -43,7 +43,7 @@
                     </ul>
                 </nav>
             </section>
-            <section>
+            <section id="articles">
                 <div class="article_section">
                     <article class="article">Article Title
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid unde suscipit a dicta iste tenetur quo. Aspernatur veniam accusamus dignissimos odit corrupti accusantium fugit quisquam? Ducimus aut facilis minima quaerat.</p>
